--- a/Manuel/index.html
+++ b/Manuel/index.html
@@ -10,7 +10,8 @@
 
     <script src="libraries/p5.min.js"></script>
     <script src="libraries/p5.sound.min.js"></script>
-    <script src="libraries/p5.touchgui.js"></script>
+    <script src="libraries/p5.gui.js"></script>
+    <script src="libraries/quicksettings.js"></script>
   </head>
 
   <body>
