--- a/Manuel/space.html
+++ b/Manuel/space.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Sketch</title>
+    <title>space</title>
 
     <link rel="stylesheet" type="text/css" href="style.css">
 
@@ -12,9 +12,16 @@
     <script src="libraries/p5.sound.min.js"></script>
     <script src="libraries/p5.gui.js"></script>
     <script src="libraries/quicksettings.js"></script>
+    <script src="https://cycling74.s3.amazonaws.com/download/xebra.js"></script>
   </head>
 
   <body>
     <script src="sketch.js"></script>
+
+    <div id="menu" class="hidden">
+      <button onclick="changeColor('red')">BPM</button>
+      <button onclick="changeColor('green')">volume rock</button>
+      <button onclick="changeColor('blue')">volume gas</button>
+    </div>
   </body>
 </html>
