--- a/Manuel/space.html
+++ b/Manuel/space.html
@@ -7,6 +7,7 @@
     <title>space</title>
 
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <script src="libraries/p5.min.js"></script>
     <script src="libraries/p5.sound.min.js"></script>
@@ -15,7 +16,7 @@
     <script src="https://cycling74.s3.amazonaws.com/download/xebra.js"></script>
   </head>
 
-  <body>
+  <body style="margin:0; padding:0; overflow:hidden;">
     <script src="sketch.js"></script>
 
     <div id="menu" class="hidden">
