in and out sound implemented

--- a/Manuel/space.html
+++ b/Manuel/space.html
@@ -18,11 +18,8 @@
 
   <body style="margin:0; padding:0; overflow:hidden;">
     <script src="sketch.js"></script>
+    <script src="menus.js"></script>
+    <script src="Star.js"></script>
 
-    <div id="menu" class="hidden">
-      <button onclick="changeColor('red')">BPM</button>
-      <button onclick="changeColor('green')">volume rock</button>
-      <button onclick="changeColor('blue')">volume gas</button>
-    </div>
   </body>
 </html>
