--- a/Manuel/index.html
+++ b/Manuel/index.html
@@ -11,6 +11,7 @@
 
     <script src="libraries/p5.min.js"></script>
     <script src="libraries/p5.sound.min.js"></script>
+    <script src="libraries/p5.dom.js"></script>
     <script src="libraries/p5.gui.js"></script>
     <script src="libraries/quicksettings.js"></script>
     <script src="https://cycling74.s3.amazonaws.com/download/xebra.js"></script>
